# dataprep

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODESPACE_SUMMARY.md  DataPrep_Architecture_Diagrams.pptx  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE.md  README.md  SETUP_DEPLOYMENT.md  SYSTEM_DIAGRAMS.md  TESTING_GUIDE.md  UI_IMPLEMENTATION_GUIDE.md  WELCOME.txt  generate_ppt.py  pyproject.toml  quickstart.bat  quickstart.sh  test_lonye_transformer.py  test_transformer.py
.github/agents/: assembler.agent.md  configurator.agent.md  diagnostician.agent.md  doc-interpreter.agent.md  doc-normalizer.agent.md  etl-orchestrator.agent.md  flow-designer.agent.md  test-runner.agent.md
.planning/: .continue-here.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: tmap-compiled-script-mismatch.md
.planning/quick/: 2026-05-18-tmap-rewrite-progress.md  2026-05-18-tmap-test-triage.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
.planning/review/: TRIAGE.md  manager-commits-REVIEW-api.md  manager-commits-REVIEW-engine.md  manager-commits-REVIEW-javabridge.md  manager-commits-REVIEW.md
agents/: PLATFORM.md
agents/examples/: README.md  accounts.csv  complex_real_brd.docx  gen_complex_real_brd.py  gen_sample_etl_requirements.py  gen_sample_etl_requirements_complex.py  gen_sample_real_brd.py  prices.csv  sample_enrichment_requirements.docx  sample_etl_requirements.docx  sample_real_brd_proposal.json  trades.csv
agents/knowledge/: landmines.py
agents/schemas/: _index.json  aggregate_row.json  config-surfaces.md  convert_type.json  file_input_delimited.json  file_output_delimited.json  filter_rows.json  join.json  map.json  py_map.json  python_dataframe.json  schema_compliance_check.json  sort_row.json  unique_row.json
agents/templates/: etl_requirements_template.md  recon_requirements_template.md
agents/tools/: audit_log.py  check_schema_drift.py  component_schema.py  docx_purity.py  explode_doc.py  extract_doc.py  materialize_golden.py  normalize_validate.py  reference_matcher.py  render_skills.py  run_and_validate.py  surface_code_cells.py  validate_agents.py  validate_config.py
api/: app.py
api/routes/: jobs.py  python_routines.py  routines.py
backend/: requirements.txt  run.py
backend/app/: main.py  models.py  schemas.py
backend/jobs/: a23f7b66-03bf-47b2-bf39-f9a6f686a08f.json  f01009de-0ec3-47b5-8ee6-f7422c413257.json  job_1768428753534.json  job_1768692944174.json  job_1768693283398.json  job_1768693323750.json  string.json
config/: OA_DETAIL_SWITCH.txt  OA_GBL_TRANSACTION_DETAILS_TRANSLATION.txt  OA_LONYE_ACCOUNT_COLUMN_LOOKUP.txt  OA_RECONOURGB3_LONYE_SDE_MATCHER.txt  lonye_input.txt  lonye_python.yaml  rdpfa.yaml  rdpfa_python.yaml
data/: lonye_input.txt  lonye_output.txt  sample_input.txt  sample_output.txt  test_output.txt
data/jobs/: 82dad3da-b578-40f8-bfba-917e46ad0907.json  93d91f36-162e-4127-9e72-31ed1c4e6090.json
demo/budget_ui/: launch_daemon.py
demos/: 1-glassmorphism-nodes.html  2-purple-dark-theme.html  3-rounded-pill-nodes.html  4-command-palette.html
docs/: AGENT_STEPWISE_TESTING_GUIDE.md  ARCHITECTURE.md  BaseComponent Info.docx  CODE_REFERENCE.md  COMPLETION_CHECKLIST.md  COMPONENT_IMPLEMENTATION_GUIDE.md  COMPONENT_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Demo Talking Points.docx  FILE_INVENTORY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  JAVA_BRIDGE_SETUP.md  JOB_CONFIGURATION_SCHEMA.md  JOB_WORKFLOW_GUIDE.md  KNOWLEDGE_BASE_SUMMARY.md  LAYOUT_UPDATE.md  QUICK_REFERENCE.md  README_INDEX.md  SETUP_DEPLOYMENT.md  START_HERE.md  SYSTEM_DIAGRAMS.md  TESTING_GUIDE.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  UI_IMPLEMENTATION_GUIDE.md  UI_INDEX.md  UI_README.md  WORKSPACE_OVERVIEW.md
docs/ai-prompts/: CREATE_COMPONENT.md  DEBUG_JOB_FAILURE.md  EDIT_COMPONENT.md
docs/deployment process/: RecTran-Deployment-Design.md  TEMPLATES-README.md  config.template.json  deploy.sh  generate.py  job.template.jil  run.template.sh  run_job.sh
docs/guides/: AUTHORING_JOB_JSON.md  DEV_SETUP.md  QUICKSTART.md
docs/understanding/: 00-system-overview.md  01-converter-layer.md  02-engine-core.md  03-engine-components-catalog.md  04-tmap-and-java-bridge.md  05-database-layer.md  06-api-tooling-coverage.md  07-findings-and-risks.md  08-coverage-and-tests.md  README.md
docs/v1/: BaseComponent-Info.md  STANDARDS.md  talend_to_v1_converter_guide.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend-angular/: .editorconfig  .gitignore  ANGULAR_SETUP.md  BACKEND_INTEGRATION.md  COMMANDS.md  COMPLETION.md  FILE_INVENTORY.md  FILE_LISTING.md  FINAL_SUMMARY.md  INTEGRATION_TESTING.md  MIGRATION_COMPLETE.md  README.md  SCRIPTS.md  START_HERE.md  STATUS_REPORT.md  angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.base.json  tsconfig.json  verify-backend.bat  verify-backend.sh
frontend-angular/src/: index.html  styles.scss
frontend-react/: index.html  package-lock.json  package.json  tsconfig.json
frontend-react/src/: App.css  App.tsx
frontend/src/: App.tsx  index.css
scripts/: add_connectors.py  check_per_module_coverage.py  diff_map_outputs.py  dump_xmlmap_item.py
src/python_routines/: swift_transformer.py
src/router/: ui_registry.json  ui_registry_v2.json
tests/: __init__.py  conftest.py
tests/agents/: test_docx_purity.py  test_explode_jail.py  test_materialize_rung_aware.py  test_normalize_tier.py
tests/demo_budget_ui/: test_daemon.py  test_daemon_synthetic.py  test_fetcher.py  test_presenter.py  test_sender.py  test_server.py
tests/integration/: __init__.py  conftest.py  test_file_exist_e2e.py  test_iterate_e2e.py
tests/talend_xml_samples/: Job_05_3_clean.item  Job_05_3_filepath_expr.item  Job_05_3_filter_join.item  Job_05_3_join_routine.item  Job_05_3_join_trim.item  Job_05_3_l2l_trim.item  Job_05_3_vars_simple.item  (+51 more)
(+1514 files in other folders)
